--- a/index.html
+++ b/index.html
@@ -13,13 +13,28 @@
             align-items: center;
         }
 
+        .container {
+            display: flex;
+            align-items: center;
+        }
+
+        .texto {
+            margin-left: 20px;
+        }
+
         img {
-            max-width: 100%;
+            max-width: 50%; /* Alterei para 50% para permitir espaço para o texto */
             max-height: 100%;
         }
     </style>
 </head>
 <body>
-    <img src="63922a5b6918eb4fdedf14fc4a69fd0b.jpg" alt="Imagem Gigante">
+    <div class="container">
+        <img src="63922a5b6918eb4fdedf14fc4a69fd0b.jpg" alt="Imagem Gigante">
+        <div class="texto">
+            <h2>Sobre as Calopsitas</h2>
+            <p>Cuidar de calopsitas requer dedicação e tempo, proporcionando uma alimentação equilibrada e interações afetuosas. Com amor e carinho, essas aves se tornam membros queridos da família, enchendo nossas vidas de alegria e amor.</p>
+        </div>
+    </div>
 </body>
 </html>
