--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
     <div class="container">
         <img src="63922a5b6918eb4fdedf14fc4a69fd0b.jpg" alt="Imagem Gigante">
         <div class="texto">
-            <h2>Sobre as Calopsitas</h2>
-            <p>Cuidar de calopsitas requer dedicação e tempo, proporcionando uma alimentação equilibrada e interações afetuosas. Com amor e carinho, essas aves se tornam membros queridos da família, enchendo nossas vidas de alegria e amor.</p>
+            <h2>Sobre a calopsita Cara branca</h2>
+            <p>As calopsitas da mutação Cara branca tem como principal característica a inibição da psitacina que é o pigmento responsável por manifestar as cores amarela, laranja e vermelha nos psitacídeos, portanto uma calopsita cara branca irá apresentar a cor branca onde seria amarelo numa calopsita comum, e a mancha laranja na bochecha some por completo.
+
+Então basicamente a ave irá apresentar as cores branca, marrom e cinza e suas variações como o prata, bronze e etc.   </p>
         </div>
     </div>
 </body>
