--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="63922a5b6918eb4fdedf14fc4a69fd0b.jpg" alt="Imagem Gigante">
+        <img src="Calopsitas-Betim-Cara-Branca-HD1.webp" alt="Imagem Gigante">
         <div class="texto">
             <h2>Sobre a calopsita Cara branca</h2>
             <p>As calopsitas da mutação Cara branca tem como principal característica a inibição da psitacina que é o pigmento responsável por manifestar as cores amarela, laranja e vermelha nos psitacídeos, portanto uma calopsita cara branca irá apresentar a cor branca onde seria amarelo numa calopsita comum, e a mancha laranja na bochecha some por completo.
