--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
             align-items: center;
         }
 
-        .container {
+      .container {
             display: flex;
             align-items: center;
+            width: 100%;
+            max-width: 800px; /* Definindo uma largura máxima para o container */
+            padding: 0 20px; /* Adicionando um espaçamento interno */
         }
 
         .texto {
             margin-left: 20px;
+            flex: 1; /* Para que o texto ocupe todo o espaço disponível */
         }
 
         img {
